Defined classes for logging in

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(FlightsManager)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED on)
 
+include_directories(./include)
 file( GLOB SOURCES ./src/*.cpp)
 add_executable(my_exe ${SOURCES})
